Implement Target Storage registry
